refactor: change api endpoints and remake some methods